--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "winston": "^3.17.0"
   }
 }
