--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "libphonenumber-js": "^1.11.19",
     "stripe": "^17.5.0",
